update project with response simple and detail for student
