# src/main/java/com/api/school/student/domain/ports/StudentRepositoryPort.java
@@ -2,6 +2,7 @@ package com.api.school.student.domain.ports;
 
 import com.openapi.generate.model.ResponseExampleDto;
 import com.openapi.generate.model.ResponseStudentDto;
+import com.openapi.generate.model.ResponseStudentSimpleDto;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
@@ -12,7 +13,9 @@ import reactor.core.publisher.Mono;
  * @since 2025-08-27
  */
 public interface StudentRepositoryPort {
+    Flux<ResponseStudentSimpleDto> getAllStudentsSimple();
     Flux<ResponseStudentDto> getAllStudents();
+    Mono<ResponseStudentSimpleDto> getStudentByIdSimple(Integer id);
     Mono<ResponseStudentDto> getStudentById(Integer id);
     Mono<ResponseExampleDto> getStudentObjectById(Integer id);
 }
